src/objects/encrypt_Config__c.object
<CustomObject>
    <fields>
        <fullName>EncryptionEnabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Encryption Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <label>New Field Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>object_FieldName__c</fullName>
        <label>Old Field Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>encrypt Config</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>E-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>encrypt Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>